fix purpose spacing

--- a/src/scss/_connect.scss
+++ b/src/scss/_connect.scss
@@ -18,7 +18,7 @@
     margin-bottom: rem-calc(20px);
 
     @media #{$medium} {
-      margin-top: rem-calc(100px);
+      margin-top: rem-calc(70px);
       margin-bottom: rem-calc(100px);
     }
   }
